--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.androidproject.views.MainFragment"
+        android:name="com.example.androidproject.views.home.MainFragment"
         android:label="MainFragment"
         tools:layout="@layout/fragment_main">
 
